--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -26,8 +26,11 @@
   <router-outlet></router-outlet>
 </main>
 <footer>
-  <div>
-    <i class="fa fa-brands fa-linkedin-square" target="_blank"></i>
+  <div class="social-icons">
+    <a href="https://www.linkedin.com/in/amanda-mar/" target="_blank">
+      <i class="fa fa-brands fa-linkedin-square"></i>
+     
+    </a>
   </div>
   <div class="page-links">
     <a
@@ -45,5 +48,6 @@
     >Projects</a
   >
   </div>
-  &copy; {{ date.getFullYear() }} {{ author }}
+  <p>&copy; {{ date.getFullYear() }} {{ author }}</p>
+  
 </footer>
