--- a/portfolio/src/app/app.component.scss
+++ b/portfolio/src/app/app.component.scss
@@ -6,14 +6,15 @@ header {
   background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, .4)); /* Apply gradient background */
   transition: background-color 0.5s ease; /* Add transition for smooth fading effect */
   z-index: 100; /* Ensure the header appears above other content */
-  height: 3rem;
+  height: 3.5rem;
   nav {
     height: 100%;
     top: 50%;
   }
 
 header.scrolled {
-  background: black !important; /* Adjust gradient for scrolled state */
+  background: rgb(36,36,36) !important;
+  opacity: 0.9 !important;
 }
 
   ul {
@@ -29,11 +30,11 @@ header.scrolled {
       margin: 0 1rem;
       a {
         text-decoration: none;
-        color: rgb(150, 150, 150);
+        color: white;
         font-size: 1.5rem;
         cursor: pointer;
         &.active {
-          color: rgb(170, 160, 68);
+          font-weight: bold;
         }
       }
     }
@@ -51,16 +52,39 @@ main {
 }
 footer {
   font-size: 0.8rem;
-  padding-right: 1rem;
   align-self: flex-end;
   width: 100%;
-  background: rgba(0, 0, 0, 1); 
+  background: rgba(36, 36, 36, 1); 
+  border-top: white 1px dotted;
   text-align: center;
   z-index: 2;
+  .social-icons {
+    font-size: 25px;
+    color: white;
+    transition: color 0.3s ease;
+    a {
+      color: white;
+    }
+  }
+  .social-icons:hover {
+    cursor: pointer;
+    color: rgb(150, 150, 150);
+  }
+  .page-links {
+    a {
+      color: rgb(179, 179, 179);
+    }
+  }
+  p {
+    color: white;
+  }
 }
 .page-links{
   display: flex;
   flex-direction: row;
   gap: 3%;
   justify-content: center;
+  a {
+    text-decoration: none;
+  }
 }
