--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -25,8 +25,7 @@
             <p>
                 Hello There! My name is Amanda and I enjoy learning how things on the web work under the hood, and how to build them myself. I was introduced to software development at my previous job in the mechanical engineering/construction industry, and was pleasantly surprised at how a few lines of well built code can automate tasks that would have previously taken me hours. 
             </p>
-            <p>From there, I enrolled in the Harvard CS50’s Introduction to Computer Science online course to test the my interest in the subject, ultimately
-                leading to a career change from the mechanical engineering industry to the software development industry.</p>
+            <p>Afterward, I made the decision to return to school to pursue a comprehensive education in full-stack software development. My goal was to acquire a deep understanding of both front-end and back-end technologies, enabling me to independently develop a wide range of applications.</p>
             <p>
                 Outside of software development, I am passionate about being active and in particular, enjoying the outdoors and beautiful mountains that are offered to us Vancouverites. You can catch me outdoors hiking, backpacking, star gazing, running, rock climbing, or road biking to destress and enjoy my free time.</p>
         </section>
