--- a/portfolio/src/app/components/home/home.component.html
+++ b/portfolio/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
             </p>
             <p>Afterward, I made the decision to return to school to pursue a comprehensive education in full-stack software development. My goal was to acquire a deep understanding of both front-end and back-end technologies, enabling me to independently develop a wide range of applications.</p>
             <p>
-                Outside of software development, I am passionate about being active and in particular, enjoying the outdoors and beautiful mountains that are offered to us Vancouverites. You can catch me outdoors hiking, backpacking, star gazing, running, rock climbing, or road biking to destress and enjoy my free time.</p>
+                Outside of software development, I am passionate about being active and in particular, enjoying the outdoors and beautiful mountains. You can catch me outdoors hiking, backpacking, star gazing, running, rock climbing, or road biking to destress and enjoy my free time.</p>
         </section>
 
         <section class="hidden-home">
